--- a/ShadowsocksR-4.7.0-win/gui-config.json
+++ b/ShadowsocksR-4.7.0-win/gui-config.json
@@ -3,8 +3,8 @@
 		{
 			"remarks" : "",
 			"id" : "508DC4C05C54DBD3E661316A88DA8075",
-			"server" : "209.250.229.17",
-			"server_port" : 1002,
+			"server" : "199.247.9.250",
+			"server_port" : 1003,
 			"server_udp_port" : 0,
 			"password" : "20125013ping",
 			"method" : "aes-256-cfb",
@@ -23,7 +23,7 @@
 	"sysProxyMode" : 3,
 	"shareOverLan" : false,
 	"localPort" : 1080,
-	"localAuthPassword" : null,
+	"localAuthPassword" : "vqt_HGjDsDefzgGlYl8o",
 	"dnsServer" : "",
 	"reconnectTimes" : 2,
 	"randomAlgorithm" : 3,
