--- a/WYY/mongooseDate/package.json
+++ b/WYY/mongooseDate/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.2",
     "mongoose": "^4.13.5",
-    "multer": "^1.3.0"
+    "multer": "^1.3.0",
+    "supervisor": "^0.12.0"
   }
 }
